@@ -758,7 +758,6 @@ btr_search_guess_on_hash(
 {
 	buf_block_t*	block;
 	rec_t*		rec;
-	const page_t*	page;
 	ulint		fold;
 	dulint		index_id;
 #ifdef notdefined
@@ -809,29 +808,7 @@ btr_search_guess_on_hash(
 		goto failure_unlock;
 	}
 
-	page = page_align(rec);
-	{
-		ulint	page_no		= page_get_page_no(page);
-		ulint	space_id	= page_get_space_id(page);
-
-		buf_pool_mutex_enter();
-		block = (buf_block_t*) buf_page_hash_get(space_id, page_no);
-		buf_pool_mutex_exit();
-	}
-
-	if (UNIV_UNLIKELY(!block)
-	    || UNIV_UNLIKELY(buf_block_get_state(block)
-			     != BUF_BLOCK_FILE_PAGE)) {
-
-		/* The block is most probably being freed.
-		The function buf_LRU_search_and_free_block()
-		first removes the block from buf_pool->page_hash
-		by calling buf_LRU_block_remove_hashed_page().
-		After that, it invokes btr_search_drop_page_hash_index().
-		Let us pretend that the block was also removed from
-		the adaptive hash index. */
-		goto failure_unlock;
-	}
+	block = buf_block_align(rec);
 
 	if (UNIV_LIKELY(!has_search_latch)) {
 
@@ -848,8 +825,9 @@ btr_search_guess_on_hash(
 		buf_block_dbg_add_level(block, SYNC_TREE_NODE_FROM_HASH);
 	}
 
-	if (UNIV_UNLIKELY(buf_block_get_state(block)
-			  == BUF_BLOCK_REMOVE_HASH)) {
+	if (UNIV_UNLIKELY(buf_block_get_state(block) != BUF_BLOCK_FILE_PAGE)) {
+		ut_ad(buf_block_get_state(block) == BUF_BLOCK_REMOVE_HASH);
+
 		if (UNIV_LIKELY(!has_search_latch)) {
 
 			btr_leaf_page_release(block, latch_mode, mtr);
@@ -858,7 +836,6 @@ btr_search_guess_on_hash(
 		goto failure;
 	}
 
-	ut_ad(buf_block_get_state(block) == BUF_BLOCK_FILE_PAGE);
 	ut_ad(page_rec_is_user_rec(rec));
 
 	btr_cur_position(index, rec, block, cursor);
@@ -870,8 +847,8 @@ btr_search_guess_on_hash(
 	is positioned on. We cannot look at the next of the previous
 	record to determine if our guess for the cursor position is
 	right. */
-	if (UNIV_EXPECT(
-		    ut_dulint_cmp(index_id, btr_page_get_index_id(page)), 0)
+	if (UNIV_EXPECT
+	    (ut_dulint_cmp(index_id, btr_page_get_index_id(block->frame)), 0)
 	    || !btr_search_check_guess(cursor,
 				       has_search_latch,
 				       tuple, mode, mtr)) {
@@ -1690,7 +1667,6 @@ btr_search_validate(void)
 /*=====================*/
 				/* out: TRUE if ok */
 {
-	page_t*		page;
 	ha_node_t*	node;
 	ulint		n_page_dumps	= 0;
 	ibool		ok		= TRUE;
@@ -1725,28 +1701,30 @@ btr_search_validate(void)
 		node = hash_get_nth_cell(btr_search_sys->hash_index, i)->node;
 
 		for (; node != NULL; node = node->next) {
-			const buf_block_t*	block;
+			const buf_block_t*	block
+				= buf_block_align(node->data);
+			const buf_block_t*	hash_block
+				= buf_block_hash_get(
+					buf_block_get_space(block),
+					buf_block_get_page_no(block));
+			const page_t*		page
+				= buf_block_get_frame(block);
 
-			page = page_align(node->data);
-			{
-				ulint	page_no	= page_get_page_no(page);
-				ulint	space_id= page_get_space_id(page);
-
-				block = buf_block_hash_get(space_id, page_no);
-			}
-
-			if (UNIV_UNLIKELY(!block)) {
-
-				/* The block is most probably being freed.
-				The function buf_LRU_search_and_free_block()
-				first removes the block from
+			if (hash_block) {
+				ut_a(hash_block == block);
+			} else {
+				/* When a block is being freed,
+				buf_LRU_search_and_free_block() first
+				removes the block from
 				buf_pool->page_hash by calling
 				buf_LRU_block_remove_hashed_page().
 				After that, it invokes
-				btr_search_drop_page_hash_index().
-				Let us pretend that the block was also removed
-				from the adaptive hash index. */
-				continue;
+				btr_search_drop_page_hash_index() to
+				remove the block from
+				btr_search_sys->hash_index. */
+
+				ut_a(buf_block_get_state(block)
+				     == BUF_BLOCK_REMOVE_HASH);
 			}
 
 			ut_a(!dict_index_is_ibuf(block->index));
