@@ -631,29 +631,6 @@ buf_block_get_zip_size(
 }
 
 #if defined UNIV_DEBUG || defined UNIV_ZIP_DEBUG
-/***********************************************************************
-Gets the block to whose frame the pointer is pointing to. */
-UNIV_INLINE
-const buf_block_t*
-buf_block_align(
-/*============*/
-				/* out: pointer to block */
-	const byte*	ptr)	/* in: pointer to a frame */
-{
-	const buf_block_t*	block;
-	ulint			space_id, page_no;
-
-	ptr = (const byte*) ut_align_down(ptr, UNIV_PAGE_SIZE);
-	page_no = mach_read_from_4(ptr + FIL_PAGE_OFFSET);
-	space_id = mach_read_from_4(ptr + FIL_PAGE_ARCH_LOG_NO_OR_SPACE_ID);
-
-	block = (const buf_block_t*) buf_page_hash_get(space_id, page_no);
-	ut_ad(block);
-	ut_ad(buf_block_get_state(block) == BUF_BLOCK_FILE_PAGE);
-	ut_ad(block->frame == ptr);
-	return(block);
-}
-
 /*************************************************************************
 Gets the compressed page descriptor corresponding to an uncompressed page
 if applicable. */
@@ -664,11 +641,7 @@ buf_frame_get_page_zip(
 				/* out: compressed page descriptor, or NULL */
 	const byte*	ptr)	/* in: pointer to the page */
 {
-	const page_zip_des_t*	page_zip;
-	buf_pool_mutex_enter();
-	page_zip = buf_block_get_page_zip(buf_block_align(ptr));
-	buf_pool_mutex_exit();
-	return(page_zip);
+	return(buf_block_get_page_zip(buf_block_align(ptr)));
 }
 #endif /* UNIV_DEBUG || UNIV_ZIP_DEBUG */
 
