@@ -139,9 +139,7 @@ row_upd_rec_sys_fields(
 	ut_ad(rec_offs_validate(rec, index, offsets));
 #ifdef UNIV_SYNC_DEBUG
 	if (!rw_lock_own(&btr_search_latch, RW_LOCK_EX)) {
-		buf_pool_mutex_enter();
 		ut_ad(!buf_block_align(rec)->is_hashed);
-		buf_pool_mutex_exit();
 	}
 #endif /* UNIV_SYNC_DEBUG */
 
